--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
 
 <body>
   <header class="header">
+
+    <div class="overlay"> </div>
     <nav class="flex flex-jc-sb flex-ai-c">
       <a href="/" class="header__logo">
         <img src="images/logo.svg" alt="Easybank" />
       </a>
 
-      <a href="#" class="header__menu hide-for-desktop">
+      <a id="btnHamburger" href="#" class="header__toggle hide-for-desktop">
         <span></span>
         <span></span>
         <span></span>
@@ -49,9 +51,15 @@
 
       <a href="#" class="button header__cta hide-for-mobile">Request Invite</a>
     </nav>
-
+    <div class="header__menu">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+      <a href="#">Blog</a>
+      <a href="#">Careers</a>
+    </div>
   </header>
-  <!-- 
+
   Home
   About
   Contact
@@ -127,12 +135,12 @@
 
   Request Invite
 
-  © Easybank. All Rights Reserved 
+  © Easybank. All Rights Reserved
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
-  -->
+
 
   <script src="app/js/script.js"></script>
 </body>
