--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <body>
   <header class="header">
 
-    <div class="overlay"> </div>
-    <nav class="flex flex-jc-sb flex-ai-c">
+    <div class="overlay has-fade"> </div>
+    <nav class="container container--pall flex flex-jc-sb flex-ai-c">
       <a href="/" class="header__logo">
         <img src="images/logo.svg" alt="Easybank" />
       </a>
@@ -51,7 +51,7 @@
 
       <a href="#" class="button header__cta hide-for-mobile">Request Invite</a>
     </nav>
-    <div class="header__menu">
+    <div class="header__menu has-fade">
       <a href="#">Home</a>
       <a href="#">About</a>
       <a href="#">Contact</a>
@@ -60,25 +60,30 @@
     </div>
   </header>
 
-  Home
-  About
-  Contact
-  Blog
-  Careers
+  <section class="hero">
+    <div class="container">
+      <div class="hero__image">
+      </div>
+      <div class="hero__text container--pall">
+        <h1>
+          Next generation digital banking
+        </h1>
+        <p class="hero__desc">
+          Take your financial life online. Your Easybank account will be a one-stop-shop
+          for spending, saving, budgeting, investing, and much more.
+        </p>
+        <a href="#" class="button hero__cta"> Request Invite </a>
+      </div>
+    </div>
 
-  Request Invite
+  </section>
 
 
 
-  Next generation digital banking
-
-  Take your financial life online. Your Easybank account will be a one-stop-shop
-  for spending, saving, budgeting, investing, and much more.
-
-  Request Invite
 
 
 
+<!-- 
   Why choose Easybank?
 
   We leverage Open Banking to turn your bank account into your financial hub. Control
@@ -139,7 +144,7 @@
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 
 
   <script src="app/js/script.js"></script>
